--- a/src/style/App.css
+++ b/src/style/App.css
@@ -1,5 +1,5 @@
 .App {
-  height: 100%;
+  min-height: 100vh;
   padding: 0 10px;
   position: relative;
   display: flex;
@@ -17,7 +17,7 @@
 }
 
 .header p {
-  margin: 5px 0;
+  margin: 10px 5px 80px;
 }
 
 .code {
@@ -56,6 +56,7 @@
 }
 
 button {
+  width: fit-content;
   text-decoration: none;
   color: white;
   background-color: black;
@@ -70,4 +71,25 @@ button:hover {
   color: black;
   background-color: white;
   border: 2px solid black;
+}
+
+.container {
+  min-height: 500px;
+  min-width: 900px;
+  padding: 20px 0;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.container > :first-child {
+  padding-right: 400px;
+  border-right: 1px solid rgb(163, 163, 163);
+}
+
+.process-image {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  min-width: 400px;
 }
